fixed alignment of footer/responsiveness does not work

--- a/homestyle.css
+++ b/homestyle.css
@@ -340,7 +340,7 @@ a:visited {
   flex-direction: column;
   margin-right:2rem;
   float: right;
-  transform: translateY(-245px);
+  transform: translateY(-205px);
 }
 .footer-3 h2{
   text-align: center;
