--- a/loginstyle.css
+++ b/loginstyle.css
@@ -154,7 +154,7 @@ li{
     transform: translateX(-5px);  
   }
   .footer-3 h2{
-    transform: translateY(10px);
+    transform: translateY(19px);
   }
  
 
